[tool.poetry]
name = "toasts"
version = "0.1.0"
description = "Get desktop notifications from programming websites like GitHub, Stack Overflow and the likes :)"

include = ["toasts/data/**/*"]

authors = ["Gokul <gokulps15@gmail.com>"]

license = "MIT"

readme = "README.md"

repository = "https://github.com/gokulsoumya/toasts"
homepage = "https://github.com/gokulsoumya/toasts"

[tool.poetry.dependencies]
python = "^3"
confuse = "^0.5.0"
requests = "^2.19"
plyer = "^1.3.0"

[tool.poetry.scripts]
toasts = "toasts.main:main"
